# meteorological_alerts_haskell

./: .gitignore  Classifier.hs  Main.hs  Parser.hs  Types.hs  build_error.txt  fetch_imd.py  imd_archive.csv  implementation_plan.md  package-lock.json  readme.md  walkthrough.md
backend/: Main.hs  Parser.hs  dockerfile  imd-simulator.cabal  nixpacks.toml  package.yaml
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
frontend/: Temp.c  index.html  package-lock.json  package.json
frontend/src/: Dashboard.tsx  LogicInspector.tsx  index.css  useSimulation.ts
worker/: fetch_imd.py  requirements.txt
