cabal-version:      2.4
name:               imd-simulator
version:            0.1.0.0

executable imd-server
    main-is:          Main.hs
    other-modules:    Types, Classifier, Parser
    build-depends:    base
                    , aeson
                    , servant-server
                    , warp
                    , wai
                    , wai-cors
                    , cassava
                    , vector
                    , text
                    , bytestring
    default-language: Haskell2010
